test/src/e2e_vm_tests/test_programs/should_pass/language/panic_expression/panic_in_same_functions/src/main.sw
// This test proves that https://github.com/FuelLabs/sway/issues/7386 is fixed.
script;

mod module;

struct S {}

impl S {
    fn function() {
        panic "This is an error message.";
    }
}

fn function() {
    panic "This is an error message.";
}

fn main() {
    function();
    S::function();
    module::module_main();
}
