test/src/e2e_vm_tests/test_programs/should_fail/recursive_const_associated/src/main.sw
library;

struct S {}

// TODO: Uncomment this code, and enable this test and add checks once https://github.com/FuelLabs/sway/issues/6537 is fixed.
impl S {
    // const A: u8 = Self::B;
    // const B: u8 = Self::A;

    // const X: u8 = Self::Y;
    // const Y: u8 = Self::Z;
    // const Z: u8 = Self::X;
}